buffer management fine tuning, source code formatting